infrastructure/security/authentik/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
  - name: gateway-external
    namespace: gateway
  hostnames:
  - "auth.homelabjunkie.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: authentik-server
      port: 9000
